# keydrill

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
docs/: config.toml  configuration.md  custom-layouts.md
docs/layouts/: colemak-custom.toml  colemak-dh.toml
src/: app.rs  event.rs  main.rs  utils.rs  words.rs
src/config/: mod.rs  theme.rs
src/layout/: mod.rs  types.rs
src/layout/builtin/: colemak.rs  colemak_dh.rs  mod.rs
src/ui/: color_cycle.rs  keyboard.rs  level_select.rs  mod.rs  results.rs  typing.rs
