[package]
name = "keydrill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "1.0.3"
tachyonfx = "0.25"
unicode-width = "0.2.2"
clap = { version = "4.5.60", features = ["derive"] }
